# memphisdrip

./: README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
docs/: CHANGELOG.md
src/memphisdrip/: VERSION  __init__.py  _version.py  cli_utils.py  notifier.py
