[project]
name = "memphisdrip"
#version = "x.x.x"
dynamic = ["version"] # look in src/memphisdrip/VERSION
description = "Generic utility functions leveraged by City-of-Memphis-Wastewater."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

authors = [
  { name="George Clayton Bennett", email="george.bennett@memphistn.gov" },
]
maintainers = [
  { name="George Clayton Bennett", email="george.bennett@memphistn.gov" },
]
license = "MIT"
license-files = ["LICENSE"]
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Development Status :: 3 - Alpha",
    #"Development Status :: 4 - Beta",
    #"Development Status :: 5 - Production/Stable",
]


keywords = [
    "utilities",
    "cli_utils",
    "typer_resolve_arg_flag_pair"
]

[project.urls]
Homepage = "https://github.com/city-of-memphis-wastewater/memphisdrip"
Repository = "https://github.com/city-of-memphis-wastewater/memphisdrip"

#[project.scripts]
#dworshak-prompt = "memphisdrip.__main__:run"
#dworshak-prompt = "memphisdrip.cli:app"

[project.optional-dependencies]
typer = [
    "typer>=0.21.1",
    #"rich>=14.3.2",
    #"typer-helptree>=0.1.10",
]

full = [
    "memphisdrip[typer]"
]

[tool.uv]
# This tells uv that if it can't find a wheel for aarch64,
# it is allowed to build from source using your local Rust/Clang.
package = true
resolution = "highest"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
test = [
    "pytest>=8.4.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {file = "src/memphisdrip/VERSION"}

